{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 16,
  "lineage": "ac65adcb-3f96-91cf-f656-ff250c123eb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c013f43d377d58f",
            "arn": "arn:aws:ec2:ap-south-1:484931764711:instance/i-02690acf767f5fd99",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02690acf767f5fd99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_cicd-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0851ffe17ad81f003",
            "private_dns": "ip-10-1-0-174.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.174",
            "public_dns": "ec2-13-127-124-184.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.124.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c36e0ff20a8bd7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9bb5624d405c634",
            "tags": {
              "Name": "jenkins-int-dev-jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c1874c537093867"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.my-cicd-sg",
            "data.aws_ami.latest-amazon-linux-image",
            "module.my_cicd_vpc.aws_subnet.public",
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-cicd-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:security-group/sg-07c1874c537093867",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c1874c537093867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my-cicd-sg",
            "name_prefix": "",
            "owner_id": "484931764711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-int-dev-sg"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:network-acl/acl-0149531cceca549da",
            "default_network_acl_id": "acl-0149531cceca549da",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0149531cceca549da",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "484931764711",
            "subnet_ids": [
              "subnet-0e9bb5624d405c634"
            ],
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            },
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:route-table/rtb-0ae2455732d0ce474",
            "default_route_table_id": "rtb-0ae2455732d0ce474",
            "id": "rtb-0ae2455732d0ce474",
            "owner_id": "484931764711",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:security-group/sg-03e8b05a7a2d5779c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03e8b05a7a2d5779c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "484931764711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            },
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:internet-gateway/igw-05e69437324c6cbec",
            "id": "igw-05e69437324c6cbec",
            "owner_id": "484931764711",
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            },
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e69437324c6cbec",
            "id": "r-rtb-0ae2a6f547efbedd11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae2a6f547efbedd1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_internet_gateway.this",
            "module.my_cicd_vpc.aws_route_table.public",
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:route-table/rtb-0ae2a6f547efbedd1",
            "id": "rtb-0ae2a6f547efbedd1",
            "owner_id": "484931764711",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8a30d8043c491c",
            "route_table_id": "rtb-0ae2a6f547efbedd1",
            "subnet_id": "subnet-0e9bb5624d405c634"
          },
          "dependencies": [
            "module.my_cicd_vpc.aws_route_table.public",
            "module.my_cicd_vpc.aws_subnet.public",
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:subnet/subnet-0e9bb5624d405c634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9bb5624d405c634",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484931764711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-int-dev-subnet-1"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-subnet-1"
            },
            "vpc_id": "vpc-06e27d74a1ed3ee13"
          },
          "dependencies": [
            "module.my_cicd_vpc.aws_vpc.this",
            "module.my_cicd_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_cicd_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484931764711:vpc/vpc-06e27d74a1ed3ee13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0149531cceca549da",
            "default_route_table_id": "rtb-0ae2455732d0ce474",
            "default_security_group_id": "sg-03e8b05a7a2d5779c",
            "dhcp_options_id": "dopt-0faa20c5feab8711f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e27d74a1ed3ee13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae2455732d0ce474",
            "owner_id": "484931764711",
            "tags": {
              "Name": "jenkins-int-dev-vpc"
            },
            "tags_all": {
              "Name": "jenkins-int-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}